# aoc-y2021

./: Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/src/: lib.rs
day01/src/: lib.rs  main.rs
day02/src/: lib.rs  main.rs
day03/src/: lib.rs  main.rs
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/src/: bench.rs  lib.rs  main.rs
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/src/: bench.rs  lib.rs  main.rs
day09/src/: lib.rs  main.rs
day10/src/: lib.rs  main.rs
day11/src/: lib.rs  main.rs
day12/src/: bench.rs  lib.rs  main.rs
day13/src/: lib.rs  main.rs
day14/src/: lib.rs  main.rs
day15/src/: lib.rs  main.rs
day16/src/: lib.rs  main.rs
day17/src/: lib.rs  main.rs
day18/: Cargo.toml
day18/src/: lib.rs
day19/src/: main.rs
day20/src/: main.rs
day21/src/: main.rs
day22/src/: main.rs
day23/src/: main.rs
day24/src/: main.rs
day25/src/: main.rs
solutions/: Cargo.toml
solutions/src/: main.rs
src/: lib.rs  runner.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
utils/src/: lib.rs
