[package]
name = "aoc-y2021"
version = "0.1.0"
authors = ["Nils Alex <nils@famalex.de>"]
edition = "2021"
default-run = "runner"

[lib]
name = "aoc2021"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "runner"
path = "src/runner.rs"
test = false

[dependencies]
num = "0.4.0"
rustc-hash = "1.1.0"
